@@ -299,6 +299,10 @@ NEW FEATURES
         data part (e.g., the object type) required for the class can
         be included as one of the superclasses in the Classes argument.
 
+    o	The argument f= to showMethods() can be an expression
+        evaluating to a generic function, allowing methods to be shown
+        for non-exported generics and other nonstandard cases.
+
 
 REGULAR EXPRESSIONS
 
